crates/uitest/fixtures/mir_check/borrowck_call_result_aggregate_handle_then_write.snap
---
source: crates/uitest/tests/mir_check.rs
expression: res
input_file: fixtures/mir_check/borrowck_call_result_aggregate_handle_then_write.fe
---
error[11-0002]: borrow conflict in `fn borrowck_call_result_aggregate_handle_then_write`
   ┌─ borrowck_call_result_aggregate_handle_then_write.fe:13:5
   │
12 │     let mut hp: HandlePair = mk_handle(mut value)
   │                                            ----- `value` is borrowed here
13 │     value = 1
   │     ^^^^^^^^^ access overlaps an active `mut` borrow
